@@ -38,3 +38,6 @@ Below is a [[patch]] to [[plugins/edittemplate]] that does a few things:
      						return;
      					}
      				}
+
+
+[[done]]
