@@ -10,6 +10,10 @@ ikiwiki (2.65) UNRELEASED; urgency=low
   * Fix reversion in use of ikiwiki -verbose -setup with a setup file that
     enables syslog. Setup output is once again output to stdout in this
     case.
+  * edittemplate: Default new page file type to the same type as the template.
+    (willu)
+  * edittemplate: Add "silent" parameter. (Willu)
+  * edittemplate: Link to template, to allow creating it. (Willu)
 
  -- Joey Hess <joeyh@debian.org>  Wed, 17 Sep 2008 14:26:56 -0400
 
